rss feed linked
Former-commit-id: aa1ae9cb7477c942229853dd9e74cdf0ede2fea8

--- a/index.html
+++ b/index.html
@@ -214,13 +214,11 @@ Some minerals here could be good ore for production of aluminum, glass, quartz, 
 		</div>
 		<br>
 		<p class="pad15"> 
-			The above images were taken by the <a href="http://lroc.sese.asu.edu/">
-			Lunar Reconnaissance Orbiter</a>. The image below was taken by the 
-			<a href="http://wms.lroc.asu.edu/apollo/view?image_name=AS16-P-5396">panoramic 
-			camera</a> on Apollo 16. My favorite service for LRO images is <a href="http://target.lroc.asu.edu/q3/"> QuickMap</a>. 
-			On that service, here is a link to <a href="http://bit.ly/1Ne8Yjg">Lalande</a>. Zoom in! And play with the layers menu, 
-			you open it by clicking the three diamonds on the top left of the screen. Imagery from LRO instruments, Chandrayaan, 
-			GRAIL, and Clementine are all on it.
+The above images were taken by the <a href="http://lroc.sese.asu.edu/">Lunar Reconnaissance Orbiter</a>. 
+The image below was taken by the <a href="http://wms.lroc.asu.edu/apollo/view?image_name=AS16-P-5396">panoramic camera</a> 
+on Apollo 16. My favorite service for LRO images is <a href="http://target.lroc.asu.edu/q3/"> QuickMap</a>. 
+On that service, here is a link to <a href="http://bit.ly/1Ne8Yjg">Lalande</a>. 
+Zoom in! And play with the layers menu, you open it by clicking the three diamonds on the top left of the screen. Imagery from LRO instruments, Chandrayaan, GRAIL, and Clementine are all on it.
 		</p>
 		<br>
 	</div>
@@ -228,36 +226,35 @@ Some minerals here could be good ore for production of aluminum, glass, quartz, 
 		<div class="col-12 col-m-12">
 			<div class="darkYellow pix">
 				<button class="numbers tooltipBL" style="top: 37%; left: 70%;">11
-					<span>The bits poking out furthest from the crater wall are just emerging from shadow in this shot. 
-						The sun was 37<sup>o</sup> above the horizon at this moment, so the angle of the crater wall must be 
-						just about the same - and just a little steeper in this puddle of black the marker is on top of. 
-						Let's say 40% here. This is a good, steep, long grade. Not very common on the Moon.
+					<span>
+The bits poking out furthest from the crater wall are just emerging from shadow in this shot. 
+The sun was 37<sup>o</sup> above the horizon at this moment, so the angle of the crater wall must be 
+just about the same - and just a little steeper in this puddle of black the marker is on top of. 
+Let's say 40% here. This is a good, steep, long grade. Not very common on the Moon.
 					</span>
 				</button>
 				<button class="numbers tooltipBL" style="top: 47%; left: 70%;">12
 					<span>
-						That tiny speck just on the rim at right are the huge boulders shown in the top middle image. 
+That tiny speck just on the rim at right are the huge boulders shown in the top middle image. 
 					</span>
 				</button>
 				<button class="numbers tooltipML" style="top: 55.5%; left: 72.5%;">13
 					<span>
 						<img class="tooltip-img" style="float: left;" src="img/Teacup250.jpg">
-						This crater has a soft rim and no floor, the incline of its sides just meet. 
-						That may indicate the top layer of granular regolith is deeper than it is, so over 40 m. 
-						Recent modeling has shown the ground sort of folds back on itself on the lips of craters, which 
-						would make the granular layer twice the depth it had before. It could be 100 m deep. 
+This crater has a soft rim and no floor, the incline of its sides just meet. 
+That may indicate the top layer of granular regolith is deeper than it is, so over 40 m. 
+Recent modeling has shown the ground sort of folds back on itself on the lips of craters, which 
+would make the granular layer twice the depth it had before. It could be 100 m deep. 
 					</span>
 				</button>
 				<button class="numbers tooltipBR" style="top: 22%; left: 35%;">14
 					<span>
-						This looks like bedrock. Up close, there is surely a layer of moondust over it, but 
-						thanks to the angle, not a lot. 
-						We can hope for meter or so, easily dug away on a grade like this. 
-						In bedrock, you find minerals much purer 
-						than the regolith on the surface. It hasn't been mixed over the aeons by meteor impacts that toss 
-						particles all over the planet. On the Moon, minerals could come in layers, not veins like 
-						on Earth. If you find a layer of rich ore, it could extend over a large area. Around here the 
-						jackpot would be layers highly concentrated in KREEP minerals and thorium.  
+This looks like bedrock. Up close, there is surely a layer of moondust over it, but thanks to the angle, not a lot. 
+We can hope for meter or so, easily dug away on a grade like this. In bedrock, you find minerals much purer 
+than the regolith on the surface. It hasn't been mixed over the aeons by meteor impacts that toss 
+particles all over the planet. On the Moon, minerals could come in layers, not veins like 
+on Earth. If you find a layer of rich ore, it could extend over a large area. Around here the 
+jackpot would be layers highly concentrated in KREEP minerals and thorium.  
 					</span>
 				</button>
 				<button class="numbers tooltipMR" style="top: 52%; left: 4%;">15
@@ -941,36 +938,31 @@ Some minerals here could be good ore for production of aluminum, glass, quartz, 
 				</button>
 				<button class="numbers tooltipB" style="top: 60%; left:40%;">27
 					<span>
-						Notice how the sunlight falls between the arches.
-						They allow 2/3 of sunlight to enter the dugout space, but 
-						you could spend half of all your time here and get a radiation dose safe for a 
-						permanent resident - about 0.035 Sv/yr in this configuration. 
-						Nuclear plant workers on Earth are permitted a maximum dose of 0.05 Sv/yr. 
-						The dose from straight above you is quite high, 
-						in the narrow corridor between arches, but off to the sides, the greater the angle the lower the 
-						dose because an ever greater thickness of arches is between you and the outside. Here you have a 
-						space where you can actually see the sky risk-free. If you have seen plans for Moon structures with 
-						big windows or thin walls before, they were either ignoring the radiation problem or assuming stays 
-						would be short. To live on the Moon, you need this kind of protection. 
-						For solar flares, you'd need to retreat 
-						into the hall. If sunlight is falling on you, you are in danger. But that is fine. 
-						Flares are rare and you would be alerted of one's approach in 
-						plenty of time. Enough time to move the potted plants into the hall, even. 
+Notice how the sunlight falls between the arches.
+They allow 2/3 of sunlight to enter the dugout space, but you could spend half of all your time here and get a radiation dose safe for a 
+permanent resident - about 0.035 Sv/yr in this configuration. 
+Nuclear plant workers on Earth are permitted a maximum dose of 0.05 Sv/yr. 
+The dose from straight above you is quite high, in the narrow corridor between arches, but off to the sides, the greater the angle the lower the 
+dose because an ever greater thickness of arches is between you and the outside. Here you have a 
+space where you can actually see the sky risk-free. If you have seen plans for Moon structures with 
+big windows or thin walls before, they were either ignoring the radiation problem or assuming stays 
+would be short. To live on the Moon, you need this kind of protection. 
+For solar flares, you'd need to retreat into the hall. If sunlight is falling on you, you are in danger. But that is fine. 
+Flares are rare and you would be alerted of one's approach in 
+plenty of time. Enough time to move the potted plants into the hall, even. 
 					</span>
 				</button>
 				<button class="numbers tooltipML" style="top: 72%; left:55%;">28
 					<span>
-						This arched opening in the regolith 
-						is the beginning of the sunken hall. Over time it would be dug straight through 
-						to the inner face of Lalande Crater, opening onto it with windows 
-						(protected from radiation by an overhanging platform that has 
-						loose regolith piled on top) for a panoramic view 
-						of the crater floor. More images will presently be posted showing the construction process and 
-						technique. Luckily, regolith is extremely stable when excavated, much more so than any soil on Earth. 
-						This space will be reinforced with arches but the building process is aided by the ground's 
-						stability. The laser-like heating power of the lenses will be used to score the regolith so it is 
-						easier to break up and dig out. The digger rover will anchor itself to Gibraltar so it can claw into 
-						the surface with full power without tipping in the low gravity. 
+This arched opening in the regolith is the beginning of the sunken hall. Over time it would be dug straight through 
+to the inner face of Lalande Crater, opening onto it with windows 
+(protected from radiation by an overhanging platform that has loose regolith piled on top) for a panoramic view 
+of the crater floor. More images will presently be posted showing the construction process and 
+technique. Luckily, regolith is extremely stable when excavated, much more so than any soil on Earth. 
+This space will be reinforced with arches but the building process is aided by the ground's 
+stability. The laser-like heating power of the lenses will be used to score the regolith so it is 
+easier to break up and dig out. The digger rover will anchor itself to Gibraltar so it can claw into 
+the surface with full power without tipping in the low gravity. 
 					</span>
 				</button>
 				<button class="numbers tooltipBL" style="top: 60%; left:77%;">29
@@ -994,8 +986,8 @@ to maximize absorption. Then just let in the right amount of sun. Remember the s
 				</button>
 			</div>
 		</div>
+		<a href="feed/rss.xml">RSS feed</a>
 	</div>
 </div>
 </body>
 </html>
-
