--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@ A lot of stuff on Moonwards relies on modern standards, so you may want to <a hr
 	<div class="rowR pix">
 		<p class="col-9r12 col-m-10r12 black roundLeft">
 Here you will see what a focused drive to settle the Moon can create.  
-The first colony 
-will fundamentally change the way humanity sees itself and its place in the universe. 
+The first colony will fundamentally change the way humanity sees itself and its place in the universe. 
 We don't seek that future only because we don't see its potential.  
 Cernan's Promise
 			<sup class="yellow tooltipTL">[1]
      				<span style="font-size: 1.3em; line-height: 1.3em;">
-"We leave as we came and, God willing, as we shall return: with peace and hope for all mankind" - Gene Cernan, as he stepped off the Moon, Apollo 17, Dec 19, 1972
+"We leave as we came and, God willing, as we shall return: with peace and hope for all mankind" 
+- Gene Cernan, as he stepped off the Moon, Apollo 17, Dec 19, 1972
 				</span>
 			</sup> 
 is to change that. <br><br> We are building a detailed virtual model of a lunar colony, where visitors can act out all of its construction, operations, and daily life. Its design will be something that could really be built with technology in our reach, 
@@ -106,13 +106,10 @@ we will act. We will settle the Moon, and cross perhaps the most important thres
 					<span>
 						<img class="tooltip-img" src="img/kreep.jpg" alt="map showing hotspot of thorium concentration at Lalande crater">
 This is where one of the highest concentrations of thorium detected on the Moon is. 
-The map at right by the Lunar Prospector marks hotspots of it in white. Where 
-there is thorium, there is KREEP - Potassium, 
-Rare Earth Elements, and Phosphorus. 
-Most of the Moon has only traces of K and P, even less of REE. 
-K and P are necessary for plant growth.
-The rare earth elements neodymium and 
-samarium are used for making high-strength magnets - which in 0.16 g could do lots of neat stuff. 
+The map at right by the Lunar Prospector marks hotspots of it in white. 
+Where there is thorium, there is KREEP - Potassium, Rare Earth Elements, and Phosphorus. 
+Most of the Moon has only traces of K and P, even less of REE. K and P are necessary for plant growth.
+The rare earth elements neodymium and samarium are used for making high-strength magnets - which in 0.16 g could do lots of neat stuff. 
 Thorium can be processed into fuel for nuclear rocket engines.
 					</span>
 				</button>
@@ -212,7 +209,7 @@ Some minerals here could be good ore for production of aluminum, glass, quartz, 
 				<img src="img/LalandeArea500.jpg" alt="Southeast Lalande Crater area">
 			</div>
 		</div>
-		<br>
+		<br><br>
 		<p class="pad15"> 
 The above images were taken by the <a href="http://lroc.sese.asu.edu/">Lunar Reconnaissance Orbiter</a>. 
 The image below was taken by the <a href="http://wms.lroc.asu.edu/apollo/view?image_name=AS16-P-5396">panoramic camera</a> 
