--- a/planning.html
+++ b/planning.html
@@ -134,7 +134,7 @@ page but a few aren't. You can download the Blender files for those objects ther
 			<div class="col-7r8 col-m-7r8">
 				<p>
 Have questions about stuff you see here? Stack Exchange is a great place to find out more, and if what you 
-wanted to know isn't there, you can ask.
+wanted to know isn't there, you can ask. Both of us are active over there (Kim as Kim, Sigvart as Hohmannfan), and we are using a chatroom over there to communitcate.
 				</p>
 			</div>
 		</div>	 
