new b4w model of Lalande
Former-commit-id: 063f0eff2458698bc636269bfbb392ce7cfd41cc

--- a/index.html
+++ b/index.html
@@ -333,12 +333,12 @@ Excellent for creating fertile soil and such too. What a score that would be.
 	</div>
 	<div class="rowR darkYellow">
 		<div class="col-12 col-m-12">
-			<div class="rovL black pad15" id="b4w_Lalande" style="max-width: 500px;">
+			<div class="rowL black pad15" id="b4w_Lalande" style="max-width: 500px;">
 You can move around this 3D map of Lalande to get a feel for the place. It is an accurate model based on laser 
 altimeter data from the LRO combined with image data. 
 			</div>
 			<div class="darkYellow pix">
-				<a href="webplayer/webplayer.html?load=../blend4web/LalandeMarkers.json" class="linkImage">
+				<a href="webplayer/webplayer.html?load=../blend4web/Lalande/LalandeSmall.json" class="linkImage">
 					<img src="img/thumb/CraterOverlay512.jpg" style="width:512px;height:512px;" class="overlay" alt="Link to 3D model of the Lalande crater">
 				</a>
 			</div>
