--- a/learn.html
+++ b/learn.html
@@ -33,7 +33,7 @@ MathJax.Hub.Config({
 			}
 		</style>
 	</head>
-<body>
+<body onload="subDraw()">
 <!--[if lt IE 8]>
 <p class="browserupgrade">You are using an <strong>outdated</strong> browser. 
 Please <a href="http://www.mozilla.org/en-US/firefox/new/">upgrade your browser</a> to improve your experience.</p>
