--- a/learn.html
+++ b/learn.html
@@ -45,6 +45,9 @@ td{
 	padding-left:20px;
 	padding-right:20px;
 }
+h4 {
+	font-size:200%;
+}
 .orbit summary{
 	background-color:#002000;
 	border-radius: 20px;
@@ -57,8 +60,8 @@ td{
 	font-family:'Titillium Web', monospace;
 	color:blue;
 }
-h4 {
-	font-size:200%;
+.pad10 {
+	padding:10px;
 }
 		</style>
 	</head>
@@ -128,8 +131,8 @@ The calculators are also based on JavaScript, and they do not work without it. T
 	</div>
 	<br class="clearboth">
 	<div class="rowR">
-		<div class="black roundAll">
-			<div class="darkYellow pad15 roundAll">
+		<div class="black pad10 roundAll">
+			<div class="darkYellow pad10 roundAll">
 				<h3 class="yellow">The Rocket Equation</h3><br class="clearboth">
 				<p style="padding:0;">Mass ratio:</p>
 				<input type="text" title="Start mass divided by end mass" placeholder="Start mass divided by end mass" value="" id="massratioRE">
@@ -147,8 +150,8 @@ The calculators are also based on JavaScript, and they do not work without it. T
 				</a>
 			</div>
 		</div>
-		<div class="black roundAll">
-			<div class="darkYellow pad15 roundAll">
+		<div class="black pad10 roundAll">
+			<div class="darkYellow pad10 roundAll">
 				<h3 class="yellow">Suborbital Hop</h3><br class="clearboth">
 				<p>Click and drag!</p>
 				<div class="noFloat">
@@ -172,8 +175,8 @@ window.onload = function(){
 <!--end geogebra applet-->
 			</div>
 		</div>
-		<div class="black roundAll">
-			<div class="darkYellow pad15 roundAll">
+		<div class="black roundAll pad10">
+			<div class="darkYellow pad10 roundAll">
 				<h3 class="yellow">Lunar Elevator</h3><br class="clearboth">
 				<p>Start distance: (From the centre of the Moon towards Earth)</p>
 				<input type="text" placeholder="(km)" value="" id="start">
