fresh learn page
Former-commit-id: 7e4c5aab8ef2cd11478badbe397cd61cef5c9b72 [formerly b671ba9ff24210c2f9945d8fe81277bcbfac001d]
Former-commit-id: e01c72b6907d8547d093c9d1a269402277179e18

--- a/learn.html
+++ b/learn.html
@@ -477,5 +477,8 @@ Behold. The Pythagoras formula of orbital mechanics:
 		</div>
 	</div>
 </div>
+<script>
+subDraw();
+</script>
 </body>
 </html>
