--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html class="no-js" lang="en">
+<html class="no-js" lang="en-US">
 	<head>
 		<title>Moonwards</title>
 		<meta charset="utf-8">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
 		<meta name="theme-color" content="#ffffff">
-		<meta name="description" content="">
+		<meta name="description" content="What would it really be like to live on the Moon?">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
 		<link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
@@ -215,7 +215,8 @@ The above images were taken by the <a href="http://lroc.sese.asu.edu/">Lunar Rec
 The image below was taken by the <a href="http://wms.lroc.asu.edu/apollo/view?image_name=AS16-P-5396">panoramic camera</a> 
 on Apollo 16. My favorite service for LRO images is <a href="http://target.lroc.asu.edu/q3/"> QuickMap</a>. 
 On that service, here is a link to <a href="http://bit.ly/1Ne8Yjg">Lalande</a>. 
-Zoom in! And play with the layers menu, you open it by clicking the three diamonds on the top left of the screen. Imagery from LRO instruments, Chandrayaan, GRAIL, and Clementine are all on it.
+Zoom in! And play with the layers menu, you open it by clicking the three diamonds on the top left of the screen.
+Imagery from LRO instruments, Chandrayaan, GRAIL, and Clementine are all on it.
 		</p>
 		<br>
 	</div>
@@ -355,7 +356,8 @@ altimeter data from the LRO combined with image data.
 		 <div class="col-9 col-m-10 roundLeft black">
 			 <p>
 				 <i>
-This is a rough, partial first draft. Things are added or replaced regularly. It is here to aid collaboration and get input, which is then reflected in changes. So comments are extremely welcome - on 
+This is a rough, partial first draft. Things are added or replaced regularly.
+It is here to aid collaboration and get input, which is then reflected in changes. So comments are extremely welcome - on 
 the <a href="http://www.moonwards1.blogspot.mx/">blog</a>, 
 the <a href="https://www.realtimeboard.com/app/board/o9J_k0iGgz4=/">whiteboard</a>, 
 the <a href="http://www.moonwards.com/forum/">forum</a>,
@@ -423,19 +425,17 @@ refine it - and when has colonization ever been achieved without a ton of adapta
 			<iframe width="640" height="480" src="https://sketchfab.com/models/1621e5f3283840b6b02385cfd8ec98dd/embed" frameborder="1" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
 		</div>
 		<p class="black extrapad">
-This whole colony concept depends on basalt being used for a great many things, and on focused sunlight being used to process it. The Melt-In-Place Station comes up on the first mission to test and refine 
-how to make building materials out of the basalt dust all over the dark areas of the Moon. In the vacuum of space this basalt feedstock will behave differently than such material on Earth, 
-and it has a chemical make-up different than anything found here. It is absolutely free of hydrated minerals (with water molecules in their crystal structure) and organic chemicals, 
+This whole colony concept depends on basalt being used for a great many things, and on focused sunlight being used to process it.
+The Melt-In-Place Station comes up on the first mission to test and refine 
+how to make building materials out of the basalt dust all over the dark areas of the Moon.
+In the vacuum of space this basalt feedstock will behave differently than such material on Earth, 
+and it has a chemical make-up different than anything found here.It is absolutely free of hydrated minerals (with water molecules in their crystal structure) and organic chemicals, 
 has a higher content of iron and titanium, and its chemicals are highly reduced (meaning they tend to have extra electrons). 
 			<a href="http://www.lpi.usra.edu/publications/books/lunar_bases/LSBchapter07.pdf#pagemode=bookmarks&page=53">Analysis done on Earth</a> 
 indicates that could mean basalt materials on the Moon would be a lot <i>stronger</i> than they are here. We won't know until we experiment there. At any rate, cast basalt on Earth performs well as a construction 
 material, and all the processes proposed are based on its known properties here.
 		</p>
 		<br class="clearboth">
-				<!--<div class="floatL pad15">
-					<iframe width="100%" height="auto" src="TESTbasalt-fiber-plant2.html" 
-					frameborder="1" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
-				</div>-->
 		<p class="black extrapad">
 This sketch is even more sketchy than the others, more of a schematic really. Basalt rope and cloth are strong and durable here on 
 Earth, and are made with a simple process. How that process will need to be adapted on the Moon is an open question. It can be done though. 
@@ -487,7 +487,7 @@ lava could also optionally be used for construction.
 	<br>
 	<div class="rowR">
 		<div class="col-11 col-m-11 darkYellow">
-			<iframe width="640" height="360" src="https://www.youtube.com/embed/TdYunLnqFj0" frameborder="0" allowfullscreen></iframe>
+			<iframe width="640" height="360" src="https://www.youtube.com/embed/TdYunLnqFj0" frameborder="2" allowfullscreen class="floatR"></iframe>
 		</div>
 	</div>
 	<div class="rowR">
@@ -914,7 +914,9 @@ to maximize absorption. Then just let in the right amount of sun. Remember the s
 		</div>
 	</div>
 	<br>
-	<a href="feed/rss.xml">RSS feed</a>
+	<div class="floatR">
+		<a href="feed/rss.xml">RSS feed</a>
+	</div>
 </div>
 </body>
 </html>
